<resources>
    <string name="app_name">App ToDo</string>
    <string name="app_alta">Tarea Nueva</string>
    <string name="app_lista">Lista de Tareas</string>
    <string name="app_tarea">Tarea</string>
    <string name="app_home">Home</string>
    <string name="app_acerca">Acerca</string>
    <string name="app_contrasenia">Contraseña</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnVolver">Volver</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnHechas">Hechas</string>
    <string name="btnPendientes">Pendientes</string>
    <string name="btnTodas">Todas</string>
    <string name="btnCrearTarea">Crear Tarea</string>
    <string name="btnListaTarea">Lista Tareas</string>
    <string name="lblCheckBox">Recordar Contraseña</string>
    <string name="lblIniciarSesion">Iniciar Sesion:</string>
    <string name="lblTareas">Tareas:</string>
    <string name="lblAcerca">Acerca</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblDescripcion">Descripción</string>
    <string name="lblFecha">Fecha</string>
    <string name="lblPrioridad">Prioridad</string>
    <string name="lblCoste">Coste</string>
    <string name="lblCambContra">Cambiar Contraseña</string>
    <string name="lblContraAntigua">Contraseña Antigua</string>
    <string name="lblContraNueva">Contraseña Nueva</string>
    <string name="lblIniciar">Iniciar Sesión:</string>
    <string name="lblUsuario">Usuario</string>
    <string name="lblPassword">Password</string>
    <string name="lblRecordarContra">Recordar Contraseña</string>
    <string name="lblHecha">Hecha</string>
    <string name="txtAcerca">Somos un equipo de trabajo conformado por Iñigo y Engel para la asignatura de Diseño y Desarrollo de Dispositivos Móviles del segundo año del Grado Superior de Desarrollo de Aplicaciones Multiplataforma del Instituto Elorrieta de Bilbao - Vizcaya.</string>
</resources>