<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listaMarco"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:background="@color/cardview_shadow_end_color"
        android:listSelector="#F8E8BF"
        android:textFilterEnabled="false"
        android:translationZ="2dp"
        tools:ignore="MissingConstraints"></ListView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="409dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnPendientes"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#2D4059"
                        android:onClick="verTareasPendientes"
                        android:text="@string/btnPendientes"
                        android:textSize="12sp"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btTodas"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btnHechas"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnHechas"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#2D4059"
                        android:onClick="verTareasHechas"
                        android:text="@string/btnHechas"
                        android:textSize="12sp"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnPendientes"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btTodas"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#2D4059"
                        android:onClick="verTareasTodas"
                        android:text="@string/btnTodas"
                        android:textSize="12sp"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btnPendientes"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:layout_marginBottom="32dp"
        android:background="@mipmap/listimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>